--- a/dev/styles/styles.scss
+++ b/dev/styles/styles.scss
@@ -1,11 +1,10 @@
 @import "setup";
 @import "variables";
-@import "mixins";
 @import "global";
 @import "typography";
 //components
-@import "components/footer";
 @import "components/introPage";
-@import "components/gamePage";
+@import "components/mainPage";
 @import "components/winLose";
 @import "components/feedback";
+@import "components/footer";
