--- a/dev/styles/styles.scss
+++ b/dev/styles/styles.scss
@@ -30,36 +30,88 @@ form {
 input.submitButton {
     height: 40px;
     width: 170px;
-    background: #bad;
+    background: #9395B4;
     border: none;
+    box-shadow: 10px 10px 31px 5px rgba(0,0,0,0.6);
+    transition: all 0.5s ease;
+    opacity: 0.9;
+    &:hover {
+        box-shadow: 10px 10px 31px 5px rgba(255,255,255,1);
+        opacity: 0.99;
+    }
 }
 
 .searchInput {
     height: 38px;
     width: 170px;
     border: none;
-    background: #bad;
+    background: #9395B4;
     color: black;
     margin-bottom: 15px;
     text-align: center;
+    box-shadow: 10px 10px 31px 5px rgba(0,0,0,0.6);
+    transition: all 0.5s ease;
+    opacity: 0.9;
+    &:hover {
+        box-shadow: 10px 10px 31px 5px rgba(255,255,255,1);
+        opacity: 0.99;
+
+    }
 }
 
 
 ul {
     list-style: none;
-    padding: 0;
-    margin-top: 50px;
+    padding-top:160px;
     text-align: center;
+    padding-left: 0;
+    margin: 0;
 }
 
 li {
     margin-bottom: 50px;
     border: 1px solid red;
+    padding: 25px;
     a {
         text-decoration: none;
         color: black;
         background: pink;
         height: 40px;
         width: 170px;
+    }
+}
+
+.resultsPage {
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+}
+
+
+.secondSearch {
+    padding: 2.5%;
+}
+.resultsHeader {
+    background-image: url(../../images/dominic-hampton-615622-unsplash.jpg);
+    background-position: center;
+    background-size: cover;
+    width: 100%;
+    margin-top: 0;
+    position: fixed;
+    box-shadow: 10px 10px 31px 5px rgba(0,0,0,0.6);
+    
+}
+
+footer {
+    background-image: url(../../images/dominic-hampton-615622-unsplash.jpg);
+    background-size: cover;
+    background-position: center;
+    position: fixed;
+    width: 100%;
+    p{
+        margin: 0;
+        padding: 0;
+        color: white;
+        text-align: center;
     }
 }
