--- a/dev/styles/styles.scss
+++ b/dev/styles/styles.scss
@@ -1,319 +1,6 @@
-@import 'components/setup.scss';
+@import 'setup.scss';
 @import 'typography.scss';
+@import 'components/introPage';
+@import 'components/artistPage';
+@import 'components/eventListPage';
 
-.introPage {
-    background-image: url(../../images/dominic-hampton-615622-unsplash.jpg);
-    background-size: cover;
-    background-position: center;
-    position: relative;
-    height: 100vh;
-    margin: 0 auto;
-}
-
-.titleAndSearch {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 0;
-    position: absolute;
-    width: 100%;
-    top: 50%;
-    transform: translateY(-50%);
-}
-
-form {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-}
-
-.submitButton {
-    height: 50px;
-    width: 170px;
-    background: #9395B4;
-    border: none;
-    box-shadow: 10px 10px 31px 5px rgba(0,0,0,0.6);
-    transition: all 0.5s ease;
-    opacity: 0.9;
-    &:hover {
-        box-shadow: 10px 10px 31px 5px rgba(255,255,255,1);
-        opacity: 0.99;
-    }
-}
-
-.searchInput {
-    height: 50px;
-    width: 170px;
-    border: none;
-    background: #9395B4;
-    color: black;
-    margin-bottom: 15px;
-    text-align: center;
-    box-shadow: 10px 10px 31px 5px rgba(0,0,0,0.6);
-    transition: all 0.5s ease;
-    opacity: 0.9;
-    &:hover {
-        box-shadow: 10px 10px 31px 5px rgba(255,255,255,1);
-        opacity: 0.99;
-
-    }
-}
-
-
-ul {
-    list-style: none;
-    padding-top:190px;
-    text-align: center;
-    padding-left: 0;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 60%;
-    @media(max-width: 500px) {
-        width: 90%;
-    }
-}
-
-li {
-    width: 100%;
-    
-    }
-
-.resultsPage {
-    margin: 0;
-    padding: 0;
-    min-height: 100vh;
-    form {
-        display: flex;
-    }
-}
-
-.artistResults {
-    background: url(../../images/pinkdust.png);
-    font-size: 20px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    min-height: 100vh;
-
-
-    .artistListItem {
-        border: 5px solid $primaryColor;
-        background: transparent;
-        display: flex;
-        align-items: center;
-        flex-direction: column;
-        margin: 20px 0;
-        width: 100%;
-        box-shadow: 10px 10px 31px 5px rgba(0,0,0,0.6);
-    }
-}
-
-button.artistButton {
-    display: block;
-    width: 100%;
-    padding: 25px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: none;
-    background: rgba(159,154,164,0.3);
-    transition: all 0.6s ease;
-    &:hover {
-        background: rgba(159,154,164,0.8);
-        box-shadow: 10px 10px 31px 5px rgba(255,255,255,0.2);
-    }
-    img {
-        width: 20px;
-        height: 20px;
-        margin-right: 10px;
-    }
-}
-
-.secondSearch {
-    padding: 2.5%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: flex-start;
-    transition: all 1s ease;
-    input.searchInput {
-        margin: 0 15px 0 0;
-        transition: all 1s ease;
-        &:hover {
-            box-shadow: 5px 5px 5px 5px rgba(255,255,255,0.3);
-        }
-    }
-}
-
-.secondSearch input.submitButton {
-    transition: all 1s ease;
-}
-.secondSearch input.submitButton:hover {
-        box-shadow: 5px 5px 5px 5px rgba(255,255,255,0.3);
-
-        }
-.resultsHeader {
-    background-image: url(../../images/dominic-hampton-615622-unsplash.jpg);
-    background-size: cover;
-    width: 100%;
-    margin-top: 0;
-    position: fixed;
-    box-shadow: 10px 10px 31px 5px rgba(0,0,0,0.6); 
-    display: flex;
-    flex-direction: column-reverse;
-    align-items: center;
-    h2 {
-        color: white;
-        font-family: $baseFont;
-        font-size: 35px;
-        text-align: right;
-        margin: 15px 0 0 0;
-
-    }
-}
-
-.eventWrapper {
-    background-image: url(../../images/pinkdust.png);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    ul {
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-        width: 60%;
-        @media (max-width: 600px) {
-            width: 90%;
-        }
-    }
-}
-
-.eventList {
-    background: rgba(159,154,164,0.3);
-    padding: 50px;
-    margin: 20px 0;
-    width: 100%;
-    box-shadow: 10px 10px 31px 5px rgba(0,0,0,0.6);
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    p {
-        font-size: 22px;
-        margin: 10px 0;
-        
-    }
-    a {
-        display: block;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin-top: 7.5px;
-        margin-bottom: 15px;
-        text-decoration: none;
-        color: black;
-        background: rgba(239,121,138, 0.7);
-        height: 50px;
-        width: 170px;
-        transition: all 0.8s ease;
-        &:hover {
-            background: rgba(159,154,164,0.6);
-            color: white;
-        }
-    }
-    button {
-        height: 50px;
-        width: 170px;
-        border: none;
-        background: rgba(186,182,215,0.7);
-        transition: all 0.8s ease;
-        margin-bottom: 15px;
-        &:hover {
-            background: rgba(159,154,164,0.6);
-            color: white;
-        }
-    }
-    
-}
-
-.wishlist {
-    width: 100%;
-    margin-top: 75px;
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    h2 {
-        font-size: 35px;
-        font-family: $baseFont;
-    }
-    li {
-        width: 100%;
-        list-style: none;
-        padding: 15px;
-        margin: 20px 0;
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-        align-items: center;
-        h3 {
-            margin: 0;
-            font-size: 25px;
-        }
-        a {
-        display: block;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin-top: 7.5px;
-        margin-bottom: 10px;
-        text-decoration: none;
-        color: black;
-        background: rgba(239,121,138, 0.7);
-        height: 40px;
-        width: 170px;
-        transition: all 0.8s ease;
-        &:hover {
-            background: rgba(159,154,164,0.6);
-            color: white;
-        }
-        }
-    }
-}
-
-.wishlistWrapper {
-    width: 60%;
-    background:rgba(159,154,164,0.3);
-    box-shadow: 10px 10px 31px 5px rgba(0,0,0,0.6);
-    @media(max-width:600px) {
-        width: 90%;
-    }
-
-}
-
-
-footer {
-    background-image: url(../../images/dominic-hampton-615622-unsplash.jpg);
-    background-size: cover;
-    width: 100%;
-    height: 75px;
-    color: white;
-    text-align: center;
-    box-shadow: 10px 10px 31px 5px rgba(0,0,0,0.6);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    
-    p {
-        margin: 0;
-        padding: 0;
-        color: white;
-        text-align: center;
-        font-family: $baseFont;
-        font-size: 15px;
-    }
-}
